--- a/charts/incubator/conduit/templates/configmap.yaml
+++ b/charts/incubator/conduit/templates/configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "conduit.fullname" . }}-config
+  name: {{ include "dendrite.fullname" . }}-config
 data:
-  conduit.toml: |
+  dendrite.toml: |
     [global]
     server_name = "{{ .Values.domain }}"
-    database_path = "/var/lib/matrix-conduit/"
+    database_path = "/var/lib/matrix-dendrite/"
     database_backend = "rocksdb"
     port = 6167
     max_request_size = {{ .Values.maxUploadSizeBytes }}
