--- a/charts/incubator/dendrite/0.1.0/Chart.yaml
+++ b/charts/incubator/dendrite/0.1.0/Chart.yaml
@@ -22,3 +22,9 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "v0.3.0"
+
+dependencies:
+  - name: postgresql
+    version: 11.1.12
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
