--- a/charts/incubator/dendrite/0.1.0/values.yaml
+++ b/charts/incubator/dendrite/0.1.0/values.yaml
@@ -2,17 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
-  repository: registry.gitlab.com/famedly/dendrite/matrix-dendrite
+  repository: ghcr.io/matrix-org/dendrite-monolith
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "next"
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+  tag: "v0.7.0"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -25,10 +19,12 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -43,7 +39,8 @@ service:
 ingress:
   enabled: false
   className: ""
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -56,7 +53,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -81,9 +79,20 @@ tolerations: []
 
 affinity: {}
 
-domain: dev.matrix.seymour.family
-maxUploadSizeBytes: "20000000"
+postgresql:
+  internal: true
+  auth:
+    username: dendrite
+    password: CHANGETHIS
+
+appservice:
+  registrationFiles: []
+
 registration:
   enabled: false
-federation:
-  enabled: true
+  residentsOnly: true
+  sharedSecret: "CHANGEME"
+
+signingKeys:
+  activeKey: ""
+  inactiveKeys: []
