--- a/incubator/dendrite/0.1.0/templates/secret.yaml
+++ b/incubator/dendrite/0.1.0/templates/secret.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ include "dendrite.fullname" . }}-signing-key
 data:
   key.pem: |
-    {{ .Values.signingKeys.activeKey }}
+    {{ .Values.signingKeys.activeKey | b64enc }}
   {{- range $index, $key := .Values.signingKeys.inactiveKeys }}
   key{{ $index }}.pem: |
-    {{ $key }}
+    {{ $key | b64enc }}
   {{- end }}
