fix: require user to input base64 encoded signing key to fix \n stripping

--- a/incubator/dendrite/0.1.0/templates/secret.yaml
+++ b/incubator/dendrite/0.1.0/templates/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "dendrite.fullname" . }}-signing-key
 data:
   key.pem: |
-    {{ .Values.signingKeys.activeKey | b64enc }}
+    {{ .Values.signingKeys.activeKey }}
   {{- range $index, $key := .Values.signingKeys.inactiveKeys }}
   key{{ $index }}.pem: |
     {{ $key | b64enc }}
