--- a/incubator/dendrite/0.2.0/values.yaml
+++ b/incubator/dendrite/0.2.0/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: ghcr.io/matrix-org/dendrite-monolith
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.7.0"
+  tag: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
