fix: create DBs in postgres

--- a/incubator/dendrite/0.2.4/values.yaml
+++ b/incubator/dendrite/0.2.4/values.yaml
@@ -84,6 +84,13 @@ postgresql:
   auth:
     username: dendrite
     password: CHANGETHIS
+  primary:
+    initdb:
+      scripts:
+        #! /usr/bin/env bash
+        for db in appservice federationapi keyserver mediaapi mscs syncapi useraccounts; do
+        createdb -U dendrite -O dendrite dendrite_$db
+        done
 
 appservice:
   registrationFiles: []
