fix: actually fix db creation scripts

--- a/incubator/dendrite/0.2.5/values.yaml
+++ b/incubator/dendrite/0.2.5/values.yaml
@@ -87,10 +87,11 @@ postgresql:
   primary:
     initdb:
       scripts:
-        #! /usr/bin/env bash
-        for db in appservice federationapi keyserver mediaapi mscs syncapi useraccounts; do
-        createdb -U dendrite -O dendrite dendrite_$db
-        done
+        create_db.sh: |
+          #! /usr/bin/env bash
+          for db in appservice federationapi keyserver mediaapi mscs syncapi useraccounts; do
+            createdb -U dendrite -O dendrite dendrite_$db
+          done
 
 appservice:
   registrationFiles: []
